/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Scala application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.6.6/userguide/building_java_projects.html
 */

plugins {
    // Apply the scala Plugin to add support for Scala.
    id 'scala'

    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use Scala 2.13 in our library project
    implementation 'org.scala-lang:scala-library:2.12.18'

    // This dependency is used by the application.
    implementation 'org.apache.spark:spark-core_2.12:3.5.3'
    implementation 'org.apache.spark:spark-sql_2.12:3.5.3'
    implementation 'org.apache.hadoop:hadoop-aws:3.3.4'
    implementation 'org.apache.hadoop:hadoop-common:3.3.4'

    // Use Jupiter for testing our library
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
}

application {
    // Define the main class for the application.
    mainClass = 'demo.App'
    applicationDefaultJvmArgs = [
        '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-exports=java.base/sun.nio.cs=ALL-UNNAMED',
        '--add-exports=java.base/sun.security.action=ALL-UNNAMED',
        '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.nio=ALL-UNNAMED',
        '--add-opens=java.base/java.io=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
        '--add-opens=java.base/java.util.regex=ALL-UNNAMED'
    ]
}

compileScala {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.release.set(17)
}

tasks.withType(ScalaCompile) {
    scalaCompileOptions.additionalParameters = ["-release", "17"]
}

tasks.withType(Test) {
    jvmArgs += [
        '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-exports=java.base/sun.nio.cs=ALL-UNNAMED',
        '--add-exports=java.base/sun.security.action=ALL-UNNAMED',
        '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.nio=ALL-UNNAMED',
        '--add-opens=java.base/java.io=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
        '--add-opens=java.base/java.util.regex=ALL-UNNAMED'
    ]
}

test { 
  useJUnitPlatform() 
}
